[package]
name = "tree-sitter-abl"
description = "ABL grammar for the tree-sitter parsing library"
authors = ["Robert Edwards <robertedwardsmail@gmail.com>"]
version = "0.0.2"
keywords = ["incremental", "parsing", "abl"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/spazzymoto/tree-sitter-abl"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">= 0.19, < 0.21"

[build-dependencies]
cc = "1.0"
